--- a/AppointmentSystem/Views/Account/Login.cshtml
+++ b/AppointmentSystem/Views/Account/Login.cshtml
@@ -1,8 +1,8 @@
 ﻿@model LoginViewModel
 
 <h2>
-    Przed skontaktowaniem się z nami, zaloguj się lub
-    <a asp-action="Register" asp-controller="Account">zarejestruj!</a>
+    Before contacting us, sign in or
+    <a asp-action="Register" asp-controller="Account">sign up!</a>
 </h2>
 
 <form asp-action="Login" asp-controller="Account" method="post" class="form-horizontal" role="form">
@@ -27,7 +27,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-primary" value="Logowanie" />
+            <input type="submit" class="btn btn-primary" value="Login" />
         </div>
     </div>
 </form>
