--- a/AppointmentSystem/Views/Opinion/Index.cshtml
+++ b/AppointmentSystem/Views/Opinion/Index.cshtml
@@ -1,12 +1,14 @@
 ﻿@model Opinion
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
 <form asp-action="AddOpinion" method="post" class="form-horizontal" role="form">
 
     <div asp-validation-summary="All" class="text-danger"></div>
 
     <div class="form-group">
-        <label asp-for="UserName" class="col-md-2 cotrnol-label"></label>
+        <label class="col-md-2 cotrnol-label">Login: @User.Identity.Name</label>
         <div class="col-md-5">
-            <input asp-for="UserName" class="form-control" />
+            <input type="hidden" asp-for="UserName" class="form-control" value="@User.Identity.Name" />
 
         </div>
     </div>
